Updated to ember-cli 0.1.2 + fixed package name

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "google-map",
+  "name": "ember-google-map",
   "dependencies": {
     "handlebars": "~1.3.0",
     "jquery": "^1.11.1",
