--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
   "license": "MIT",
   "devDependencies": {
     "body-parser": "^1.2.0",
-    "broccoli-asset-rev": "0.3.1",
+    "broccoli-asset-rev": "^1.0.0",
     "broccoli-ember-hbs-template-compiler": "^1.6.1",
-    "ember-cli": "0.1.2",
+    "ember-cli": "0.1.3",
     "ember-cli-content-security-policy": "0.3.0",
+    "ember-cli-dependency-checker": "0.0.6",
+    "ember-cli-esnext": "0.1.1",
     "ember-export-application-global": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.3.0",
-    "ember-cli-qunit": "0.1.0",
+    "ember-cli-qunit": "0.1.2",
     "express": "^4.8.5",
     "glob": "^4.0.5"
   },
