--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,9 @@
 {
   "name": "ember-google-map",
   "dependencies": {
-    "handlebars": "~1.3.0",
+    "handlebars": "2.0.0",
     "jquery": "^1.11.1",
-    "ember": "1.8.1",
+    "ember": "1.9.1",
     "ember-resolver": "~0.1.11",
     "loader.js": "stefanpenner/loader.js#1.0.1",
     "ember-cli-shims": "stefanpenner/ember-cli-shims#0.0.3",
@@ -12,5 +12,8 @@
     "ember-qunit": "0.1.8",
     "ember-qunit-notifications": "0.0.4",
     "qunit": "~1.15.0"
+  },
+  "resolutions": {
+    "handlebars": "2.0.0"
   }
 }
