--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.0.0",
-    "broccoli-ember-hbs-template-compiler": "^1.6.1",
     "ember-cli": "0.1.5",
     "ember-cli-content-security-policy": "0.3.0",
     "ember-cli-dependency-checker": "0.0.6",
     "ember-cli-esnext": "0.1.1",
+    "ember-cli-htmlbars": "^0.6.0",
     "ember-cli-inject-live-reload": "^1.3.0",
     "ember-cli-qunit": "0.1.2",
     "ember-export-application-global": "^1.0.0",
