--- a/.npmignore
+++ b/.npmignore
@@ -1,3 +1,15 @@
-tmp
-dist
-node_modules
+bower_components/
+node_modules/
+tests/
+
+.bowerrc
+.editorconfig
+.ember-cli
+.travis.yml
+.npmignore
+**/.gitkeep
+bower.json
+Brocfile.js
+testem.json
+tmp/
+dist/
