--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ember"
   ],
   "ember-addon": {
-    "configPath": "tests/dummy/config"
+    "configPath": "tests/dummy/config",
+    "demoURL": "http://huafu.github.io/ember-google-map/"
   }
 }
